@@ -33,7 +33,7 @@ __get_machines() {
 _systemd_run() {
     local cur=${COMP_WORDS[COMP_CWORD]} prev=${COMP_WORDS[COMP_CWORD-1]}
     local OPTS='-h --help --version --user --system --scope --unit --description --slice
-                -r --remain-after-exit --send-sighup -H --host -M --machine --service-type
+                -r --remain-after-exit --send-sighup -M --machine --service-type
                 --uid --gid --nice --setenv -p --property'
 
     local mode=--system
@@ -76,12 +76,6 @@ _systemd_run() {
                          LimitCORE= LimitRSS= LimitNOFILE= LimitAS= LimitNPROC=
                          LimitMEMLOCK= LimitLOCKS= LimitSIGPENDING= LimitMSGQUEUE=
                          LimitNICE= LimitRTPRIO= LimitRTTIME='
-
-            COMPREPLY=( $(compgen -W '$comps' -- "$cur") )
-            return 0
-            ;;
-        -H|--host)
-            local comps=$(compgen -A hostname)
 
             COMPREPLY=( $(compgen -W '$comps' -- "$cur") )
             return 0
